# skywhale

./: .gitignore  CMakeLists.txt  Justfile  LICENSE  README.md  agents.md
agents/skills/conversation/: SKILL.md
config/: skywhale.toml.example
css/hellocss/: index.html
cxx/: CMakeLists.txt
cxx/skywhale/: CMakeLists.txt
cxx/skywhale/include/skywhale/: basic_buffer.h  fixed_block.h  memory_block.h
cxx/skywhale/src/: skywhale.cc
cxx/tests/: CMakeLists.txt
docs/: 260714 harness_guide.md  260714 superpowers_meta_skill_example.md  ai-just.md  common_detailed_development.md  database.md
docs/plans/: 2026-07-21-axum-http-server.md
docs/superpowers/plans/: 2026-07-18-core-error-contract.md
docs/superpowers/specs/: 2026-07-18-core-error-design.md
docs/work/2026/07/2026-07-18-ai-assisted-workflow/: conversation-kr.md  conversation.md  white-paper-kr.md  white-paper.md
docs/work/2026/07/2026-07-18-rust-error-handling/: conversation.md  white-paper.md
python/django/: requirements.txt  serve.py
python/django/account/: admin.py  models.py
python/django/account/migrations/: 0001_initial.py
python/django/app/: drf_sample.py  route.py  views.py
python/django/base/: settings.py  urls.py
rust/axum_base/: .env  .env.local  Cargo.toml
rust/axum_base/src/: main.rs
rust/axum_base/src/dtos/: sample.rs
rust/axum_base/src/routers/v1/: sample.rs
rust/hello_axum/: Cargo.toml  README.MD
rust/hello_axum/src/: main.rs
rust/hello_rust/: Cargo.toml
rust/hello_rust/src/: error.rs  lib.rs  main.rs  nonnull.rs  simple_http_server.rs
rust/hello_tokio/: Cargo.toml
rust/hello_tokio/src/: error.rs  main.rs
rust/helloaxum/: Cargo.toml
rust/helloaxum/src/: customext.rs  error.rs  main.rs  middlewares.rs  utils.rs
rust/helloaxum/src/dtos/: login.rs  user.rs
rust/helloaxum/src/middleware/: auth.rs
rust/helloaxum/src/routers/v1/: login.rs  user.rs
rust/hellorust/: Cargo.toml
rust/hellorust/src/: future.rs  future2.rs  main.rs  tokio_echo.rs
rust/template_axum/: Cargo.toml
rust/template_axum/logs/: log.2023-07-02-07  log.2023-07-02-10  log.2023-07-02-11
rust/template_axum/src/: error.rs  main.rs
skywhale/: Cargo.toml
skywhale/include/skywhale/: basic_buffer.h  buffer.h  mp.h  shared_block.h  simple_block.h  skywhale.h
skywhale/skywhale/: Cargo.toml
skywhale/skywhale-cli/: Cargo.toml
skywhale/skywhale-cli/src/: main.rs
skywhale/skywhale-core/: Cargo.toml
skywhale/skywhale-core/src/: config.rs  db.rs  error.rs  http.rs  lib.rs  tracing.rs
skywhale/src/: skywhale.cc
tests/: CMakeLists.txt  basic_buffer.cc  block.cc  buffer.cc  container_of.cc  ctad.cc  horn.cc
vue/hellovue/: package-lock.json  package.json
vue/hellovue/src/: Main.vue  Main0.vue  main.js
