[package]
name = "axum_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
env_logger = "0.10.0"
hyper = { version = "0.14.26", features = ["full"] }
log = "0.4.19"
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
serde =  { version = "1.0.164", features = ["derive"] }
uuid ={ version =  "1.3.4" , features = ["v4", "serde"] }
