[package]
name = "helloaxum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
bytes = "1.4.0"
axum = "0.6.18"
dotenv = "0.15.0"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
tower = "0.4.13"
serde =  { version = "1.0.164", features = ["derive"] }
uuid ={ version =  "1.3.4" , features = ["v4", "serde"] }
serde_json = "1.0.99"
