[package]
name = "skywhale-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
config = { version = "0.15", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
